recently_played title section and black bg to body

--- a/style/homepage.css
+++ b/style/homepage.css
@@ -51,6 +51,16 @@
     text-overflow: ellipsis; 
 }
 
+#recently-played h4 {
+    color: white;
+    font-size: 1.2rem;
+}
+
+#recently-played h6 {
+    color: rgb(194, 194, 194);
+    font-size: .7rem;
+}
+
 
 
 
