--- a/style/nav-player.css
+++ b/style/nav-player.css
@@ -19,6 +19,11 @@ position: fixed;
     overflow: initial;
     transform: translate3d(0px, 0px, 0px);
 }
+
+.songs{
+    border-top: solid 1px gray;
+    
+}
 /* End of Navbar Style*/
 
 
