--- a/style/homepage.css
+++ b/style/homepage.css
@@ -1,6 +1,6 @@
 /* Good Morning */
 .good-morning {
-    background: linear-gradient(to bottom, rgb(64,8,7), rgb(18,18,18));
+    background: linear-gradient(to bottom, rgb(155, 3, 0), rgb(18,18,18));
 }
 .icon-round {
     width: 2rem;
