working on responsive

--- a/style/homepage.css
+++ b/style/homepage.css
@@ -34,6 +34,17 @@
 #recently-played .card img, #shows-to-try .card img{
     height: 8rem;
 }
+@media screen and (max-width: 576px){
+    #recently-played .card img, #shows-to-try .card img{
+       
+    }
+    #recently-played .card, #shows-to-try .card{
+        height: 16rem;
+        width: 40rem;
+        margin: auto;
+        text-align: center;
+    }
+}
 
 @media screen and (max-width: 768px) {
     #recently-played .card img, #shows-to-try .card img{
@@ -43,8 +54,7 @@
         margin-left: auto;
         margin-right: auto;
     }
-}
-@media screen and (max-width: 768px) {
+
     #recently-played .card, #shows-to-try .card{
         height: 16rem;
         width: 20rem;
@@ -52,6 +62,7 @@
         text-align: center;
     }
 }
+
 
 #recently-played h5, #shows-to-try h5 {
     font-size: .8rem;
