--- a/style/nav-player.css
+++ b/style/nav-player.css
@@ -3,23 +3,24 @@
 /* Navbar style */
 
 #nav {
-position: fixed;
-    padding-top: 1rem;
-    top: 0px;
-    left: 0px;
-    display: flex;
-    flex-direction: column;
-    -webkit-box-pack: justify;
-    justify-content: space-between;
-    flex-shrink: 0;
-    background-color: rgb(8, 8, 8);
-    width: 240px;
-    height: 100vh;
-    transition: padding-top 0.2s ease 0s, width 0.2s cubic-bezier(0.4, 0, 0.2, 1) 0s;
-    border-right: 2px solid rgba(133, 133, 133, 0.1);
-    z-index: 11;
-    overflow: initial;
-    transform: translate3d(0px, 0px, 0px);
+  position: fixed;
+  padding-top: 1rem;
+  top: 0px;
+  left: 0px;
+  display: flex;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  flex-shrink: 0;
+  background-color: rgb(8, 8, 8);
+  width: 240px;
+  height: 100vh;
+  transition: padding-top 0.2s ease 0s,
+    width 0.2s cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  border-right: 2px solid rgba(133, 133, 133, 0.1);
+  z-index: 11;
+  overflow: initial;
+  transform: translate3d(0px, 0px, 0px);
 }
 /* End of Navbar Style*/
 
@@ -31,8 +32,12 @@ position: fixed;
 }
 
 .img-player {
-  width: 40%;
-  height: 50px;
+  width: 45%;
+  height: 45px;
+}
+
+.player-container > div > div > div {
+  display: flex;
 }
 
 .player-container .bg-player h5 {
@@ -61,19 +66,30 @@ position: fixed;
 
 .controls-player {
   max-width: 220px;
-  margin: 0 auto;
+  margin-top: 15px;
 }
+
+/* .controls-player .pause-icon-player {
+  border: 10px solid white;
+  border-radius: 50%;
+} */
+
+.controls-player > hr {
+  border-color: #ada9a8 !important;
+  border-width: 3px !important;
+  max-width: 65px !important;
+}
+
 .right-icons-player {
   display: flex;
+  margin-right: 8rem;
+  justify-content: right;
 }
 
+.right-icons-player > input,
 .right-icon-volume {
   display: flex;
-  align-items: center;
-}
-
-.right-icons-player .bi {
-  margin-right: 0.4rem;
+  margin: 3px 0.7rem;
 }
 
 /* End of Player style*/
