--- a/style/homepage.css
+++ b/style/homepage.css
@@ -48,14 +48,30 @@
 }
 
 #recently-played .card img, #shows-to-try .card img{
-    height: 6.5rem;
-    width: 6.5rem;
+    height: 8rem;
+}
+
+@media screen (max-width: 576px){
+    #recently-played .card img, #shows-to-try .card img{
+       
+    }
+
+    #recently-played .card, #shows-to-try .card{
+        height: 16rem;
+        width: 40rem;
+        margin: auto;
+        text-align: center;
+    }
+
+    #recently-played .card p, #shows-to-try .card p{
+        
+    }
 }
 
 @media screen and (max-width: 768px) {
     #recently-played .card img, #shows-to-try .card img{
-        height: 2rem;
-        width: 8rem;
+        height: 10rem;
+        width: 10rem;
         display: block;
         margin-left: auto;
         margin-right: auto;
