--- a/style/homepage.css
+++ b/style/homepage.css
@@ -35,7 +35,7 @@
 
 
 
-  
+
 
 #recently-played .card, #shows-to-try .card{
     background-color: var(--bg-cards);
@@ -45,49 +45,6 @@
 
 #recently-played .card img, #shows-to-try .card img{
     height: 8rem;
-}
-
-@media screen and (max-width: 576px){
-
-    #recently-played .card, #shows-to-try .card{
-        height: 16rem;
-        width: 40rem;
-        margin: auto;
-        text-align: center;
-    }
-
-}
-
-@media screen and (max-width: 768px) {
-    .custom-row {
-        margin-left: auto;
-        margin-right: auto;
-        padding-left: 46px;
-        padding-right: -49px;
-    }
-    
-    .column {
-      width: 100%;
-      display: block;
-      margin-bottom: 20px;
-    }
-  }
-
-@media screen and (max-width: 768px) {
-    #recently-played .card img, #shows-to-try .card img{
-        height: 10rem;
-        width: 10rem;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    #recently-played .card, #shows-to-try .card{
-        height: 16rem;
-        width: 12rem;
-        margin: auto;
-        text-align: center;
-    }
 }
 
 
@@ -119,9 +76,72 @@
 
 #recently-played .card-body p, #shows-to-try .card-body p {
     white-space: nowrap;
-    width: 120px;
+    width: 50px;
     overflow: hidden;
     text-overflow: ellipsis; 
+}
+
+
+@media screen and (max-width: 576px){
+    
+    .custom-row {
+        margin: 0px -67px;
+        padding-left: 46px;
+        padding-right: -49px;
+    }
+    
+    .column {
+        float: left;
+        width: 100%;
+        padding: 0 5px;
+    }
+    
+    #recently-played .card, #shows-to-try .card{
+        height: 14.5rem;
+        width: 15rem;
+        text-align: center;
+        margin-bottom: 50px;
+    }
+    
+    #recently-played .card img, #shows-to-try .card img{
+        height: 10rem;
+        width: 12rem;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+}
+
+@media screen and (min-width: 577px) and (max-width: 768px) {
+    .custom-row {
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 46px;
+        padding-right: -49px;
+    }
+    
+    .column {
+        width: 25%;
+        display: block;
+        margin-bottom: 20px;
+    }
+}
+
+@media screen and (min-width: 769px) and (max-width: 768px) {
+    #recently-played .card img, #shows-to-try .card img{
+        height: 10rem;
+        width: 10rem;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    #recently-played .card, #shows-to-try .card{
+        height: 16rem;
+        width: 12rem;
+        margin: auto;
+        text-align: center;
+    }
 }
 /* End of  recently played */
 
