--- a/style/nav-player.css
+++ b/style/nav-player.css
@@ -4,8 +4,7 @@
 
 
 #nav {
-
-position: fixed;
+    position: fixed;
     padding-top: 1rem;
     top: 0px;
     left: 0px;
@@ -16,7 +15,7 @@ position: fixed;
     flex-shrink: 0;
     background-color: rgb(8, 8, 8);
     width: 240px;
-    height: 80vh;
+    height: 100vh;
     transition: padding-top 0.2s ease 0s, width 0.2s cubic-bezier(0.4, 0, 0.2, 1) 0s;
     border-right: 2px solid rgba(133, 133, 133, 0.1);
     z-index: 11;
@@ -25,12 +24,9 @@ position: fixed;
     font-size: 12px;
 }
 
-#nav .bi:hover,
-#nav img:hover,
-#nav div:hover,
-#nav .songs:hover
-{
 
+#nav > div:hover
+{
     color: white;
     cursor: pointer;
 }
@@ -45,26 +41,7 @@ position: fixed;
     margin-left:15%;
     margin-top: 90%;
     color: white;
-
-=======
-  position: fixed;
-  padding-top: 1rem;
-  top: 0px;
-  left: 0px;
-  display: flex;
-  flex-direction: column;
-  -webkit-box-pack: justify;
-  justify-content: space-between;
-  flex-shrink: 0;
-  background-color: rgb(8, 8, 8);
-  width: 240px;
-  height: 100vh;
-  transition: padding-top 0.2s ease 0s,
-    width 0.2s cubic-bezier(0.4, 0, 0.2, 1) 0s;
-  border-right: 2px solid rgba(133, 133, 133, 0.1);
-  z-index: 11;
-  overflow: initial;
-  transform: translate3d(0px, 0px, 0px);
+ 
 
 }
 
@@ -75,7 +52,16 @@ position: fixed;
     color: rgb(214, 49, 49);
 }
 
-
+#nav > div > .playlist{
+ 
+  background-color: rgb(13, 14, 13);
+  display: block;
+  width: 100%;
+  height: 400px;
+  padding: 1em;
+  overflow-y: scroll;
+  text-align: center;
+}
 /* End of Navbar Style*/
 
 /* Player style */
