--- a/style/nav-player.css
+++ b/style/nav-player.css
@@ -13,10 +13,9 @@
     -webkit-box-pack: justify;
     justify-content: space-between;
     flex-shrink: 0;
-    background-color: rgb(8, 8, 8);
-    width: 240px;
+    background-color: rgb(0, 0, 0);
+    width: 220px;
     height: 100vh;
-    transition: padding-top 0.2s ease 0s, width 0.2s cubic-bezier(0.4, 0, 0.2, 1) 0s;
     border-right: 2px solid rgba(133, 133, 133, 0.1);
     z-index: 11;
     overflow: initial;
@@ -25,14 +24,16 @@
 }
 
 
-#nav > div:hover
-{
-    color: white;
+#nav:hover{
+   color: rgb(209, 71, 71);
     cursor: pointer;
-}
+  }
+
+   
+
 
 .songs{
-    border-top: solid 1px gray;
+    border-top: solid 1px #282828;
     
 }
 
@@ -54,13 +55,27 @@
 
 #nav > div > .playlist{
  
-  background-color: rgb(13, 14, 13);
-  display: block;
+  background-color: rgb(0, 0, 0);
   width: 100%;
-  height: 400px;
   padding: 1em;
-  overflow-y: scroll;
   text-align: center;
+}
+
+#nav > div > .playlist::-webkit-scrollbar-thumb {
+  background-color: rgb(83, 81, 81);
+  max-height: 10px;
+          
+}
+
+#nav > div > .playlist::-webkit-scrollbar,
+#nav > div > .playlist::-webkit-scrollbar-corner {
+ color: black;
+ width:10px;
+ 
+ 
+ }
+#nav > div > .playlist::-webkit-scrollbar-button{
+    color: #aaaaaa;
 }
 /* End of Navbar Style*/
 
