--- a/style/albumpage-bottom.css
+++ b/style/albumpage-bottom.css
@@ -18,4 +18,18 @@
     text-transform: capitalize;
 }
 
+#songs-list div div:first-child div:nth-child(2) p {
+    color: rgba(194, 194, 194, 0.753);
+    text-transform: uppercase;
+}
+
+#songs-list > div > div:first-child {
+    border-bottom: 1px solid rgba(212, 212, 212, 0.253);
+    padding-bottom: .5rem;
+}
+
+#songs-list > div > div:first-child i {
+    color:  rgba(194, 194, 194, 0.753);
+}
+
 /* End of List*/
