--- a/style/artistpage.css
+++ b/style/artistpage.css
@@ -1,3 +1,4 @@
+@import url('./root.css');
 /* Navbar */
 ul li {
     list-style: none;
@@ -24,5 +25,21 @@ ul li {
 
 
 /* List */
-
+.artist-list {
+    background: rgba(76,76,76,1);
+    background: -moz-linear-gradient(top, rgba(76,76,76,1) 0%, rgba(102,102,102,1) 0%, rgba(89,89,89,1) 13%, rgba(71,71,71,1) 22%, rgba(44,44,44,1) 42%, rgba(0,0,0,1) 69%, rgba(17,17,17,1) 95%, rgba(19,19,19,1) 100%);
+}
+.btn-pause {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: var(--green);
+}
+.btn-pause i {
+    font-size: 2rem;
+    color: #fff;
+}
+.songs-list small {
+    color: #fff;
+}
 /* End of List*/
