--- a/style/login.css
+++ b/style/login.css
@@ -24,18 +24,23 @@ html,
     background-color: white;
 }
 
+.main_wrap{
+
+    margin-left: 35%;
+    margin-right: 35%;
+}
 .container-fluid{
     border-bottom: solid 1px  rgb(214, 211, 211);
 }
 
 .login_info{
 
-    margin:0, auto;
+    
     background-color: white;
 }
 
 .fb_btn{
-    width: 50%;
+    width: 80%;
     background-color: #3E5A9B;
     margin: auto;
     color: white;
@@ -45,7 +50,7 @@ html,
 }
 
 .apple_btn{
-    width: 50%;
+    width: 80%;
     background-color: #000000;
     margin: auto;
     color: white;
@@ -58,4 +63,16 @@ html,
   background-color: var(--green);
   width: 50%;
   color:white;
+}
+
+
+.info_wrap{
+    border-top: solid 1px grey;
+
+     margin:0, auto;
+}
+
+.container-fluid>.main_wrap> .info_wrap> div:nth-child(4) > .forgot{
+    color: var(--green);
+    background-color: yellowgreen;
 }
