--- a/style/albumpage.css
+++ b/style/albumpage.css
@@ -1,8 +1,126 @@
+@import url(./root.css);
+
 /* Album Jumbotron */
+
+.div-album-page {
+  background: linear-gradient(
+    170deg,
+    rgba(166, 58, 134, 1) 0%,
+    rgba(18, 18, 18, 1) 37%
+  );
+}
+
+.rounded-img {
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.div-album-page .text-white h4 {
+  font-size: 20px;
+  font-weight: 800;
+}
+
+.div-album-page .text-white h1 {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  font-size: 30px;
+  font-weight: 800;
+}
+
+.div-album-page .text-white p {
+  font-size: 10px;
+  font-weight: 200;
+}
+
+.div-album-page .text-white span {
+  font-size: 10px;
+  font-weight: 800;
+}
+
+.album-btn {
+  display: inline-flex;
+  align-items: center;
+  margin-top: 2rem;
+  margin-left: 6rem;
+}
+
+#play-btn-album {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: green;
+  color: white;
+  text-align: center;
+  border: none;
+  margin-right: 15px;
+  cursor: pointer;
+}
+
+#play-btn-album img {
+  margin-top: 15px;
+  margin-left: 2px;
+}
+
+#play-btn-album ~ i {
+  color: white;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-bottom: 1rem;
+}
+
+#dots-btn-album {
+  color: white;
+  font-size: 30px;
+  font-weight: 300;
+  margin-left: 15px;
+  margin-bottom: 2rem;
+}
 
 /* End of Jumbotron*/
 
-
 /* List */
+.btn-play {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: var(--green);
+}
+.bi-play-fill  {
+  font-size: 2rem;
+  color: #fff;
+}
+.songs-list small {
+  color: #fff;
+}
+#songs-list {
+  color: white;
+}
 
+.light-text {
+  color: rgba(194, 194, 194, 0.753);
+}
+
+#songs-list p {
+  font-size: .75rem;
+  text-transform: capitalize;
+}
+
+#songs-list div div:first-child div:nth-child(2) p {
+  color: rgba(194, 194, 194, 0.753);
+  text-transform: uppercase;
+}
+
+#songs-list > div > div:first-child {
+  border-bottom: 1px solid rgba(212, 212, 212, 0.253);
+  padding-bottom: .5rem;
+}
+
+#songs-list > div > div:first-child i {
+  color:  rgba(194, 194, 194, 0.753);
+}
 /* End of List*/
