--- a/style/navbar_style.css
+++ b/style/navbar_style.css
@@ -1,4 +1,4 @@
-@import url("./root.css");
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Noto+Sans:ital@1&family=Oswald&display=swap');
 
 /* Navbar style */
 
@@ -67,6 +67,7 @@
     color:  #9e9898;
     font-size: 0.6rem;
     font-weight: lighter;
+    font-family: 'DM Sans', sans-serif;
 
 }
 
