--- a/style/root.css
+++ b/style/root.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600&family=Poppins&display=swap');
-
+/* similar to Spotify Font */
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Noto+Sans:ital@1&family=Oswald&display=swap');
 * {
     padding: 0;
     margin: 0;
@@ -13,5 +14,5 @@
 }
 
 h1, h2, h3, h4, h5, h6, p, a, span, li {
-    font-family: 'Montserrat', sans-serif !important;
+   font-family: 'DM Sans', sans-serif !important;
 }
