--- a/style/albumpage.css
+++ b/style/albumpage.css
@@ -68,6 +68,15 @@
   }
 }
 
+@media screen and (max-width: 576px) {
+  .img-album-player {
+    image-rendering: auto;
+  }
+  /* #album-id-player > div div:last-child > img {
+    margin-left: auto;
+  } */
+}
+
 @media screen and (min-width: 769px) {
   #upper-nav-album {
     width: 100%;
@@ -174,45 +183,7 @@
 /* End of Jumbotron*/
 
 /* List */
-.btn-play {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background-color: var(--green);
-}
-.bi-play-fill  {
-  font-size: 2rem;
-  color: #fff;
-}
-.songs-list small {
-  color: #fff;
-}
-#songs-list {
-  color: white;
-}
 
-.light-text {
-  color: rgba(194, 194, 194, 0.753);
-}
-
-#songs-list p {
-  font-size: .75rem;
-  text-transform: capitalize;
-}
-
-#songs-list div div:first-child div:nth-child(2) p {
-  color: rgba(194, 194, 194, 0.753);
-  text-transform: uppercase;
-}
-
-#songs-list > div > div:first-child {
-  border-bottom: 1px solid rgba(212, 212, 212, 0.253);
-  padding-bottom: .5rem;
-}
-
-#songs-list > div > div:first-child i {
-  color:  rgba(194, 194, 194, 0.753);
-}
 /* End of List*/
 
 /* Player style */
@@ -225,9 +196,8 @@
 }
 
 .img-album-player {
-  max-width: 75%;
-  max-height: 75%;
-  object-fit: cover;
+  width: 35%;
+  height: 75%;
   margin-left: 1rem;
   margin-bottom: 1rem;
 }
@@ -252,9 +222,9 @@
 
 @media (max-width: 767px) {
   .img-album-player {
-    width: 75%;
-    height: 75%;
-    margin: 0.5px;
+    width: 50%;
+    height: 70%;
+    margin-left: 5px;
   }
   .player-wrapper .bg-player h5 {
     max-width: 200px;
