right_develop -> almbu + home css modified
delete hover on queen link in album page + update recently cards+ shows css

--- a/style/album-page.css
+++ b/style/album-page.css
@@ -170,6 +170,7 @@ i {
 .enlight:hover {
     color: white;
     text-shadow: 2px 2px 4px #000000;
+    text-decoration: none;
 }
 
 #btn-play-sm-album {
